# fs-scanner

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
disk-usage-monitor/: Cargo.toml
disk-usage-monitor/src/: aggregator.rs  disk_usage_monitor.rs  error.rs  events.rs  lib.rs  scanner.rs  streams.rs
disk-usage-monitor/src/scanner/: events.rs  mod.rs  streams.rs
examples/simple-console/: Cargo.toml  main.rs
examples/simple-console/src/: main.rs
src/: aggregator.rs  core.rs  disk_usage_monitor.rs  error.rs  event.rs  events.rs  lib.rs  monitor.rs  result.rs  scanner.rs  stream.rs  test_tools.rs
src/default/: aggregate.rs  mod.rs  watcher.rs
src/scanner/: mod.rs
