[package]
name = "fs-scanner"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"

[dependencies]
anyhow = "1.0.95"
futures-util = "0.3.31"
tempdir = "0.3.7"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["rt", "sync", "macros"] }
uuid = { version = "1.11.0", features = ["v4"] }
