[package]
name = "dulib"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"

[dependencies]
anyhow = "1.0.95"
futures-util = "0.3.31"
tempdir = "0.3.7"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = [
  "rt",
  "sync",
  "macros",
  "rt-multi-thread",
] }
uuid = { version = "1.11.0", features = ["v4"] }
notify = "5.1"
futures = { version = "0.3.31", features = ["executor"] }


[dev-dependencies]
clap = { version = "4.5.23", features = ["derive"] }
