[package]
name = "disk-usage-example"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.0"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
disk-usage-monitor = { version = "0.1.0", path = "../../disk-usage-monitor" }
futures-util = "0.3.31"
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = "0.1"
